# spc

./: CHANGELOG.md  Cargo.toml  README-jp.md  README.md
.github/workflows/: release.yaml
docs/: CHANGELOG.txt  README.txt  filelist.txt
docs/orig/: AR-tag.md  BG-tag.md  CI-tag.md  Closing.md  ColorMap.md  EC-tag.md  Examples.md  FN-tag.md  FT-tag.md  Features-and-Issue.md  GR-tag.md  Generic-tag.md  How-to-write.md  Introduction.md  LC-tag.md  LN-tag.md  LW-tag.md  Mode.md  PG-tag.md  PL-tag.md  RC-tag.md  RE-tag.md  RO-tag.md  RP-tag.md  SUMMARY.md  TE-tag.md  VN-tag.md  book.toml
src/: error.rs  lib.rs  main.rs
src/canvas/: canvas_arc.rs  canvas_calc.rs  canvas_circle.rs  canvas_color.rs  canvas_ellipse.rs  canvas_exec.rs  canvas_group.rs  canvas_lib.rs  canvas_line.rs  canvas_place.rs  canvas_polygon.rs  canvas_rect.rs  canvas_repeat.rs  canvas_resolve.rs  canvas_rotation.rs  canvas_text.rs  mod.rs
src/check/: check_arc.rs  check_circle.rs  check_core.rs  check_ellipse.rs  check_generic.rs  check_group.rs  check_lib.rs  check_line.rs  check_place.rs  check_polygon.rs  check_rect.rs  check_repeat.rs  check_replace.rs  check_rotation.rs  check_text.rs  mod.rs
src/image/: image_core.rs  image_lib.rs  mod.rs
src/svg/: mod.rs  svg_core.rs  svg_lib.rs
src/utils/: color.rs  common.rs  file.rs  mod.rs
src/view/: mod.rs  view_core.rs  view_lib.rs
